# PolyMesh

./: Doxyfile  README.md  _config.yml  docs-MAINPAGE.md
2D/: CMakeLists.txt
2D/docs/: Cell_8hpp_source.html  CurvedEdge_8hpp_source.html  CurvedPolytope_8hpp_source.html  Edge_8hpp_source.html  Enrichment_8hpp_source.html  GaussLegendre_8hpp_source.html  HHO__Diffusion_2TestCase_8hpp_source.html  HHO__Poisson_2TestCase_8hpp_source.html  IntersectCurvedMesh_8hpp_source.html  IntersectMesh_8hpp_source.html  Mesh2D_8hpp_source.html  MeshBuilder2D_8hpp_source.html  MeshReaderTyp2_8hpp_source.html  StraightMesh_2MeshBuilder2D_8hpp_source.html  StraightMesh_2MeshReaderTyp2_8hpp_source.html  StraightMesh_8hpp_source.html  TransformMesh_8hpp_source.html  annotated.html  basis_8hpp_source.html  classCurvedMesh2D_1_1Cell.html  classCurvedMesh2D_1_1Cell__inherit__graph.map  classCurvedMesh2D_1_1Edge.html  classCurvedMesh2D_1_1Vertex.html  classFunction2D_1_1Curve-members.html  classHybridCore-members.html  classHybridCore.html  classMesh2D_1_1MeshReaderTyp2-members.html  classMesh2D_1_1Polytope.html  classPolyMesh2D_1_1CurvedMesh_1_1Cell__coll__graph.md5  classPolyMesh2D_1_1CurvedMesh_1_1Mesh.html  classPolyMesh2D_1_1CurvedMesh_1_1Polytope-members.html  classPolyMesh2D_1_1CurvedMesh_1_1Polytope.html  classPolyMesh2D_1_1CurvedMesh_1_1Vertex-members.html  classPolyMesh2D_1_1CurvedMesh_1_1Vertex.html  classPolyMesh2D_1_1CurvedMesh_1_1Vertex__coll__graph.md5  classPolyMesh2D_1_1CurvedMesh_1_1Vertex__inherit__graph.map  classPolyMesh2D_1_1Functional_1_1Basis-members.html  classPolyMesh2D_1_1Functional_1_1Basis.html  classPolyMesh2D_1_1Functional_1_1Curve.html  classPolyMesh2D_1_1Functional_1_1Family-members.html  (+104 more)
2D/docs/latex/: annotated.tex  classCurvedMesh2D_1_1Cell__coll__graph.md5  classCurvedMesh2D_1_1CurvedPolytopeBase__inherit__graph.md5  classCurvedMesh2D_1_1Edge.tex  classCurvedMesh2D_1_1Vertex__inherit__graph.md5  classHybridCore.tex  classMesh2D_1_1Mesh.tex  classMesh2D_1_1MeshBuilder.tex  classMesh2D_1_1Polytope.tex  classPolyMesh2D_1_1CurvedMesh_1_1Edge.tex  classPolyMesh2D_1_1CurvedMesh_1_1Mesh.tex  classPolyMesh2D_1_1Functional_1_1Basis.tex  classPolyMesh2D_1_1Functional_1_1Curve.tex  classPolyMesh2D_1_1Functional_1_1Curve__inherit__graph.md5  classPolyMesh2D_1_1Functional_1_1Family.tex  classPolyMesh2D_1_1HHODIFFUSION_1_1Model.tex  classPolyMesh2D_1_1HHOPOISSON_1_1Model.tex  classPolyMesh2D_1_1HHOPOISSON_1_1TestCase.tex  classPolyMesh2D_1_1MeshCutter.tex  classPolyMesh2D_1_1MeshIntersect.tex  classPolyMesh2D_1_1StraightMesh_1_1Edge.tex  classPolyMesh2D_1_1StraightMesh_1_1MeshBuilder.tex  group__Functional.tex  group__Mesh.tex  group__Plot.tex  hierarchy.tex  namespaces.tex  refman.tex  structPolyMesh2D_1_1HHODIFFUSION_1_1ModelParameters.tex  structPolyMesh2D_1_1HHOPOISSON_1_1ModelParameters.tex  structQuadrature_1_1QuadratureNode.tex
2D/docs/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+23 more)
2D/runs/: directories.sh
2D/runs/hho-diffusion/: data.sh  runseries.sh
2D/runs/hho-heat/: base_dirichlet.tsv  base_dirichlet.vtu  base_robin.tsv  base_robin.vtu  data.sh  heat_data_dirichlet.txt  heat_data_robin.txt  keep_this.txt  marine_growth_1_dirichlet.tsv  marine_growth_1_dirichlet.vtu  marine_growth_1_robin.tsv  marine_growth_1_robin.vtu  marine_growth_2_dirichlet.vtu  marine_growth_2_robin.vtu  marine_growth_3_dirichlet.vtu  marine_growth_3_robin.vtu  marine_growth_4_dirichlet.vtu  marine_growth_4_robin.vtu  marine_growth_5_dirichlet.vtu  marine_growth_5_robin.vtu  plot.plt  plot_thinner.cpp  runseries.sh
2D/runs/hho-helmholtz/: IE-plot.vtu  IT-plot.vtu  compute_rates  compute_rates.cpp  data.sh  elliptic-plot.vtu  exact-plot.vtu  potential-plot.vtu  runseries.sh
2D/runs/hho-poisson/: data.sh  plot.plt  runseries.sh
2D/runs/hho-stokes/: compute_rates.cpp  data.sh  plot.plt  runseries.sh
2D/schemes/: CMakeLists.txt
2D/schemes/CutMesh/: CutMesh.cpp  CutMesh.hpp
2D/schemes/HHO_Diffusion/: CMakeLists.txt  hho_diffusion.cpp
2D/schemes/HHO_Helmholtz/: CMakeLists.txt  Enrichment.cpp  Enrichment.hpp  hho_helmholtz.cpp  hho_helmholtz.hpp
2D/schemes/HHO_Poisson/: CMakeLists.txt  TestCase.hpp  hho_poisson.hpp
2D/schemes/HHO_Stokes/: CMakeLists.txt  HHO_Stokes.cpp  HHO_Stokes.hpp  StokesCore.cpp  StokesCore.hpp  StokesTests.cpp  StokesTests.hpp
2D/schemes/IntersectMesh/: IntersectMesh.cpp  IntersectMesh.hpp
2D/schemes/TransformMesh/: CMakeLists.txt  TransformMesh.cpp  TransformMesh.hpp
2D/schemes/XVEM/: CMakeLists.txt  PoissonSingularity.cpp  PoissonSingularity.h  XVEMCore.cpp  XVEMCore.h  xvem_poisson.cpp  xvem_poisson.h
2D/source/Function/: basis.hpp  common.cpp  common.hpp  function.cpp  function.hpp
2D/source/HybridCore/: CMakeLists.txt  HybridCore.cpp  HybridCore.hpp  parallel_for.cpp
2D/source/Math/: CMakeLists.txt  math.cpp  math.hpp
2D/source/Mesh/: CMakeLists.txt  Cell.cpp  Cell.hpp  Edge.cpp  Edge.hpp  Mesh.cpp  Mesh.hpp  MeshBuilder2D.hpp  MeshReaderTyp2.cpp  MeshReaderTyp2.hpp  Polytope.cpp  (+3 more)
2D/typ2_meshes/: Lshape_cartesian_1.typ2  Lshape_cartesian_2.typ2  Lshape_voro1.typ2  Lshape_voro2.typ2  circular_tri_1.typ2  circular_tri_2.typ2  circular_tri_3.typ2  circular_tri_4.typ2  circular_tri_5.typ2  hexa1_1_transformed.typ2  hexa1_2_transformed.typ2  mesh1_1_transformed.typ2  mesh1_3_transformed.typ2  mesh2_1_ref_1.typ2  mesh2_1_ref_2.typ2  mesh2_1_ref_3.typ2  mesh2_1_ref_4.typ2  mesh2_1_ref_5.typ2  mesh2_1_ref_6.typ2  mesh2_1_transformed.typ2  mesh2_2_transformed.typ2  mesh2_3_transformed.typ2  mesh2_4_transformed.typ2  mesh2_5_transformed.typ2  mesh2_6_transformed.typ2
(+1172 files in other folders)
